; ModuleID = '/home/carl/AnghaBench/linux/drivers/tty/vt/extr_keyboard.c_kbd_rate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tty/vt/extr_keyboard.c_kbd_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kbd_repeat = type { i32 }

@kbd_handler = common dso_local global i32 0, align 4
@kbd_rate_helper = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kbd_rate(%struct.kbd_repeat* %0) #0 {
  %2 = alloca %struct.kbd_repeat*, align 8
  %3 = alloca [2 x %struct.kbd_repeat], align 4
  store %struct.kbd_repeat* %0, %struct.kbd_repeat** %2, align 8
  %4 = getelementptr inbounds [2 x %struct.kbd_repeat], [2 x %struct.kbd_repeat]* %3, i64 0, i64 0
  %5 = load %struct.kbd_repeat*, %struct.kbd_repeat** %2, align 8
  %6 = bitcast %struct.kbd_repeat* %4 to i8*
  %7 = bitcast %struct.kbd_repeat* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %6, i8* align 4 %7, i64 4, i1 false)
  %8 = getelementptr inbounds %struct.kbd_repeat, %struct.kbd_repeat* %4, i64 1
  %9 = getelementptr inbounds %struct.kbd_repeat, %struct.kbd_repeat* %4, i64 2
  br label %10

10:                                               ; preds = %10, %1
  %11 = phi %struct.kbd_repeat* [ %8, %1 ], [ %13, %10 ]
  %12 = bitcast %struct.kbd_repeat* %11 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %12, i8 0, i64 4, i1 false)
  %13 = getelementptr inbounds %struct.kbd_repeat, %struct.kbd_repeat* %11, i64 1
  %14 = icmp eq %struct.kbd_repeat* %13, %9
  br i1 %14, label %15, label %10

15:                                               ; preds = %10
  %16 = getelementptr inbounds [2 x %struct.kbd_repeat], [2 x %struct.kbd_repeat]* %3, i64 0, i64 0
  %17 = load i32, i32* @kbd_rate_helper, align 4
  %18 = call i32 @input_handler_for_each_handle(i32* @kbd_handler, %struct.kbd_repeat* %16, i32 %17)
  %19 = load %struct.kbd_repeat*, %struct.kbd_repeat** %2, align 8
  %20 = getelementptr inbounds [2 x %struct.kbd_repeat], [2 x %struct.kbd_repeat]* %3, i64 0, i64 1
  %21 = bitcast %struct.kbd_repeat* %19 to i8*
  %22 = bitcast %struct.kbd_repeat* %20 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %21, i8* align 4 %22, i64 4, i1 false)
  ret i32 0
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @input_handler_for_each_handle(i32*, %struct.kbd_repeat*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
